--- a/contactus.html
+++ b/contactus.html
@@ -89,8 +89,8 @@
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
                     <!-- side block -->
-                    <!-- block 1 -->
-                    <div id="chief-cood-b" class="container-fluid fadeInRight animated">
+                    <!-- block 1 chief-cood-b -->
+                    <div id="chief-cood-b" class="container-fluid slit-in-diagonal-2 d-block">
                         <!-- row 1 -->
                         <div class="row">
                             <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
@@ -165,8 +165,8 @@
 
                     </div>
 
-                    <!-- Block 2 -->
-                    <div id="chief-e-cood-b" class="container-fluid fadeOut animated">
+                    <!-- Block 2 chief-e-cood-b-->
+                    <div id="chief-e-cood-b" class="container-fluid d-none">
                         <!-- row 1 -->
                         <div class="row">
                             <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
@@ -241,8 +241,233 @@
 
                     </div>
 
-                    <!-- Block 3 -->
-                    <div id="treasure-b" class="container-fluid fadeOut animated">
+                    <!-- Block 3 treasure-b-->
+                    <div id="treasure-b" class="container-fluid d-none">
+                        <!-- row 1 -->
+                        <div class="row">
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+
+                        </div>
+
+                        <!-- row 2 -->
+                        <div class="row">
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+                    <!-- Block-4 -->
+                    <div id="chief-admin-b" class="container-fluid d-none">
+                        <!-- row 1 -->
+                        <div class="row">
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+
+                        </div>
+
+                        <!-- row 2 -->
+                        <div class="row">
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+                    <!-- Block 5 -->
+                    <div id="public-r-b" class="container-fluid d-none">
+                        <!-- row 1 -->
+                        <div class="row">
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+
+                        </div>
+
+                        <!-- row 2 -->
+                        <div class="row">
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                <div class="card-contact-us">
+                                    <img class="card-contactus image"
+                                        src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80"
+                                        alt="">
+
+                                    <div class=" card-contactus title">Sankalp Rath</div>
+                                    <div class=" card-contactus sub-title">Chief Event Co-Ordiator</div>
+                                    <ul class="social-network social-circle center">
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                        <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+                    <!-- Block 6 -->
+                    <div id="treasure-b" class="container-fluid d-none">
                         <!-- row 1 -->
                         <div class="row">
                             <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
@@ -331,7 +556,7 @@
 
 
 
-                <div class="row">
+                <!-- <div class="row">
 
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <div class="card-contact-us">
@@ -385,7 +610,7 @@
 
                     </div>
 
-                </div>
+                </div> -->
 
 
                 <br>
